# sales-performance-statistical-analysis

./: LICENSE  README.md  pyproject.toml
data/01-raw/: statistics_sales_project_data.csv
notebooks/: statistical_analysis.ipynb
src/: __init__.py  helpers.py
